--- a/src/cpp/SimpleHttpLib/CMakeLists.txt
+++ b/src/cpp/SimpleHttpLib/CMakeLists.txt
@@ -41,15 +41,26 @@ include_directories(BEFORE ${CURL_INCLUDE_DIR})
 #######################################
 # Find libcrypto (and openssl/crypto.h)
 #######################################
-find_path(OPENSSL_INCLUDE_DIR openssl/crypto.h)
-find_library(CRYPTO_LIBRARY_PATH NAMES crypto)
-
-if (OPENSSL_INCLUDE_DIR AND CRYPTO_LIBRARY_PATH)
-  message(STATUS "SimpleHttpLib CMakeLists.txt says: libcrypto, and openssl/crypto.h found!")
-  message(STATUS "\t** OPENSSL_INCLUDE_PATH = \"${OPENSSL_INCLUDE_DIR}\"")
-  message(STATUS "\t** CRYPTO_LIBRARY_PATH = \"${CRYPTO_LIBRARY_PATH}\"")
+if (WIN32)
+  find_package(OpenSSL REQUIRED)
+  if (OpenSSL_FOUND)
+    message(STATUS "dxcpp CMakeLists.txt says: OpenSSL found!")
+    message(STATUS "\t** OPENSSL_INCLUDE_DIR = \"${OPENSSL_INCLUDE_DIR}\"")
+    message(STATUS "\t** OPENSSL_LIBRARIES = \"${OPENSSL_LIBRARIES}\"")
+  else()
+    message(FATAL_ERROR "\ndxcpp says: Unable to find OpenSSL. OPENSSL_INCLUDE_DIR = \"${OPENSSL_INCLUDE_DIR}\", OPENSSL_LIBRARIES = \"${OPENSSL_LIBRARIES}\",")
+  endif()
 else()
-  message(FATAL_ERROR "\ndxcpp says: Unable to find 'libcrypto', and/or 'openssl/crypto.h'. OPENSSL_INCLUDE_PATH = \"${OPENSSL_INCLUDE_DIR}\", CRYPTO_LIBRARY_PATH = \"${CRYPTO_LIBRARY_PATH}\"")
+  find_path(OPENSSL_INCLUDE_DIR openssl/crypto.h)
+  find_library(CRYPTO_LIBRARY_PATH NAMES crypto)
+
+  if (OPENSSL_INCLUDE_DIR AND CRYPTO_LIBRARY_PATH)
+    message(STATUS "SimpleHttpLib CMakeLists.txt says: libcrypto, and openssl/crypto.h found!")
+    message(STATUS "\t** OPENSSL_INCLUDE_PATH = \"${OPENSSL_INCLUDE_DIR}\"")
+    message(STATUS "\t** CRYPTO_LIBRARY_PATH = \"${CRYPTO_LIBRARY_PATH}\"")
+  else()
+    message(FATAL_ERROR "\ndxcpp says: Unable to find 'libcrypto', and/or 'openssl/crypto.h'. OPENSSL_INCLUDE_PATH = \"${OPENSSL_INCLUDE_DIR}\", CRYPTO_LIBRARY_PATH = \"${CRYPTO_LIBRARY_PATH}\"")
+  endif()
 endif()
 include_directories(BEFORE ${OPENSSL_INCLUDE_DIR})
 ######################################
