--- a/src/cpp/test/gtest/CMakeLists.txt
+++ b/src/cpp/test/gtest/CMakeLists.txt
@@ -6,4 +6,5 @@ project(gtest)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive") # to compile Google test
 # Build gtest library
 add_library(gtest gtest-all.cc)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
 target_link_libraries(gtest pthread) 
